--- a/package.json
+++ b/package.json
@@ -11,14 +11,24 @@
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "antd": "^4.16.0",
+    "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "zustand": "^3.5.1"
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "bracketSpacing": false
+  },
   "scripts": {
+    "pretty": "npx prettier --write . ",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
