--- a/package.json
+++ b/package.json
@@ -3,22 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^4.16.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.8",
-    "@types/react-dom": "^17.0.5",
-    "antd": "^4.16.0",
     "prettier": "^2.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2",
-    "zustand": "^3.5.1"
+    "@types/react-dom": "^17.0.5"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -31,8 +30,7 @@
     "pretty": "npx prettier --write . ",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
